# CSTS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  main.cpp  sceneTrack.cpp  scp_cpy.sh  stabilizer.cpp  stabilizer.hpp  thread.hpp  vision_core_4.geany  writer.cpp
include/mavlink/v2.0/altavian/: altavian.h  mavlink.h  mavlink_msg_autopilot_time_sync_init.h  mavlink_msg_autopilot_time_sync_set.h  mavlink_msg_av_battery_status.h  mavlink_msg_av_component_information.h  mavlink_msg_av_component_version_information.h  mavlink_msg_av_payload_control.h  mavlink_msg_av_payload_high_rate_av_commanded_data.h  mavlink_msg_av_payload_high_rate_control.h  mavlink_msg_av_payload_interface_dumb.h  mavlink_msg_av_payload_klv_stream.h  mavlink_msg_av_payload_pan_and_tilt.h  mavlink_msg_av_payload_status.h  mavlink_msg_av_payload_video_compressor_bit_rate.h  mavlink_msg_av_uplink_control.h  mavlink_msg_beacon_control.h  mavlink_msg_beacon_status.h  mavlink_msg_cancel_file_block_downlink.h  mavlink_msg_cfov.h  mavlink_msg_cfov_waypoint.h  mavlink_msg_delete_file.h  mavlink_msg_downlink_data_high_rate.h  mavlink_msg_downlink_data_low_rate.h  mavlink_msg_downlink_file_blocks_command.h  mavlink_msg_feed_forward_joystick_positions.h  mavlink_msg_feed_forward_turn_rates.h  mavlink_msg_file_information.h  mavlink_msg_file_information_request.h  mavlink_msg_file_system_manager_node_status.h  mavlink_msg_file_system_manager_node_status_request.h  mavlink_msg_file_system_status.h  mavlink_msg_gps_command.h  mavlink_msg_gps_extended_info.h  mavlink_msg_gps_key_state.h  mavlink_msg_image_capture_command.h  mavlink_msg_image_capture_information.h  mavlink_msg_mission_data_waypoint.h  mavlink_msg_motor_status.h  mavlink_msg_payload_ack.h  (+9 more)
include/mavlink/v2.0/ardupilotmega/: ardupilotmega.h  testsuite.h
include/mavlink/v2.0/common/: common.h  testsuite.h
launch/: vision_core.launch
src/: README.md  capture.cpp  capture.hpp  capture2.cpp  capture2.hpp  captureCommon.cpp  captureCommon.hpp  common.h  interfaces.cpp  interfaces.hpp  main.cpp  main.hpp  objectTrack.cpp  objectTrack.hpp  resolutions.h  sceneTrack.cpp  sceneTrack.hpp  stabilizer.cpp  stabilizer.hpp  system.cpp  system.hpp  thread.cpp  thread.hpp  version.h  writer.cpp  writer.hpp
src/capture/: capture.cpp  capture.hpp  capture2.cpp  capture2.hpp  captureCommon.cpp  captureCommon.hpp  patternGenerator.cpp  patternGenerator.hpp
src/interfaces/: interfaceMavlink.cpp  interfaceMavlink.hpp  interfaces.cpp  interfaces.hpp  mavlinkInterface.cpp  mavlinkInterface.hpp  serial_port.cpp  serial_port.h
src/ip_utils/: icmp_header.hpp
src/stabilizer/: homographySmoother.cpp  homographySmoother.hpp  stabilizer.cpp  stabilizer.hpp
src/system/: interfaces.cpp  interfaces.hpp  mavlinkInterface.cpp  mavlinkInterface.hpp  serial_port.cpp  serial_port.h  system.cpp  system.hpp
tests/: CMakeLists.txt  capture_test.cpp
